tests/integration/commands/snapshots/integration__commands__format__VALID_NEGATIVE_FRACTION.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
-98.123456789
stdout ---
-98.123456789

stderr ---
