tests/integration/commands/snapshots/integration__commands__format__no_stdin.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["check"]
status: 1
success: false
stdin ---
<no stdin passed>
stdout ---

stderr ---
error: expected non empty input from stdin
  |
help: pipe data to stdin like so
      $ echo -en "{\"hello I am valid\": null} " | jjp check
