tests/integration/commands/snapshots/integration__commands__format__preferred_width_conflict_width_then_uglify.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--preferred-width", "24", "--uglify"]
status: 2
success: false
stdin ---
<no stdin passed>
stdout ---

stderr ---
error: the argument '--preferred-width <PREFERRED_WIDTH>' cannot be used with '--uglify'

Usage: jjp format --preferred-width <PREFERRED_WIDTH>

For more information, try '--help'.
