tests/integration/commands/snapshots/integration__commands__format__preferred_width_invalid_negative.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--preferred-width=-1"]
status: 2
success: false
stdin ---
<no stdin passed>
stdout ---

stderr ---
error: invalid value '-1' for '--preferred-width <PREFERRED_WIDTH>': invalid digit found in string

For more information, try '--help'.
