tests/integration/commands/snapshots/integration__commands__format__uglify_ARRAY_MULTIPLE_EMPTY_OBJECTS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[{}, {}, {}, {}]
stdout ---
[{},{},{},{}]

stderr ---
